--- a/Investis.Web/Views/Account/Register.cshtml
+++ b/Investis.Web/Views/Account/Register.cshtml
@@ -9,78 +9,91 @@
 @Styles.Render("~/Content/bundle")
 @Scripts.Render("~/Scripts/bundle")
 
+<style>
+    .error {
+        color: red;
+    }
+</style>
+
 @using (Html.BeginForm("Register", "Account", FormMethod.Post))
 {
-<div class="form-row container-fluid">
-   
+<div class="container">
+
     <div class="form-group col-md-6">
         @*@Html.LabelFor(temp => temp.Username)*@
         @Html.TextBoxFor(temp => temp.Username, new { placeholder = "Username", @class = "form-control" })
-        @Html.ValidationMessageFor(temp => temp.Username)
+        @Html.ValidationMessageFor(temp => temp.Username, null, new { @class = "error" })
+    </div>
+    <div class="form-group col-md-6">
+        @*@Html.LabelFor(temp => temp.Email)*@
+        @Html.TextBoxFor(temp => temp.Email, new { placeholder = "Email", @class = "form-control" })
+        @Html.ValidationMessageFor(temp => temp.Email, null, new { @class = "error" })
     </div>
     <div class="form-group col-md-6">
         @*@Html.LabelFor(temp => temp.Password)*@
         @Html.PasswordFor(temp => temp.Password, new { placeholder = "Password", @class = "form-control" })
-        @Html.ValidationMessageFor(temp => temp.Password)
+        @Html.ValidationMessageFor(temp => temp.Password, null, new { @class = "error" })
     </div>
     <div class="form-group col-md-6">
         @*@Html.LabelFor(temp => temp.ConfirmPassword)*@
         @Html.PasswordFor(temp => temp.ConfirmPassword, new { placeholder = "Confirm Password", @class = "form-control" })
-        @Html.ValidationMessageFor(temp => temp.ConfirmPassword)
+        @Html.ValidationMessageFor(temp => temp.ConfirmPassword, null, new { @class = "error" })
     </div>
 
-    <div class="form-group col-md-6">
-        @*@Html.LabelFor(temp => temp.Email)*@
-        @Html.TextBoxFor(temp => temp.Email, new { placeholder = "Email", @class = "form-control" })
-        @Html.ValidationMessageFor(temp => temp.Email)
-    </div>
+
 
     <div class="form-group col-md-6">
         @*@Html.LabelFor(temp => temp.Mobile)*@
         @Html.TextBoxFor(temp => temp.Mobile, new { placeholder = "Mobile", @class = "form-control" })
-        @Html.ValidationMessageFor(temp => temp.Mobile)
+        @Html.ValidationMessageFor(temp => temp.Mobile, null, new { @class = "error" })
     </div>
 
     <div class="form-group col-md-6">
         @*@Html.LabelFor(temp => temp.BusinessName)*@
         @Html.TextBoxFor(temp => temp.BusinessName, new { placeholder = "BusinessName", @class = "form-control" })
-        @Html.ValidationMessageFor(temp => temp.BusinessName)
+        @Html.ValidationMessageFor(temp => temp.BusinessName, null, new { @class = "error" })
     </div>
 
     <div class="form-group col-md-12">
         @*@Html.LabelFor(temp => temp.Address)*@
         @Html.TextAreaFor(temp => temp.Address, new { placeholder = "Address", @class = "form-control" })
-        @Html.ValidationMessageFor(temp => temp.Address)
+        @Html.ValidationMessageFor(temp => temp.Address, null, new { @class = "error" })
     </div>
 
     <div class="form-group col-md-6">
         @*@Html.LabelFor(temp => temp.City)*@
         @Html.TextBoxFor(temp => temp.City, new { placeholder = "City", @class = "form-control" })
-        @Html.ValidationMessageFor(temp => temp.City)
+        @Html.ValidationMessageFor(temp => temp.City, null, new { @class = "error" })
     </div>
 
     <div class="form-group col-md-6">
-        @*@Html.LabelFor(temp => temp.City)*@
-        @Html.TextBoxFor(temp => temp.CountryID, new { placeholder = "Country", @class = "form-control" })
 
-        @*@Html.DropDownListFor(temp => temp.CountryID, ViewBag.VCountryList as SelectList, "---Select Country---", new { @id = "CountryID", @class = "form-control" })*@
-        @Html.ValidationMessageFor(temp => temp.CountryID)
+        <div class="form-group col-md-6">
+            @Html.DropDownListFor(temp => temp.CountryID, ViewBag.VCountryList as SelectList, "--Select Country--", new { @class = "form-control" })
+
+        </div>
+        <div class="form-group col-md-6">
+
+            @Html.ValidationMessageFor(temp => temp.CountryID, null, new { @class = "error" })
+        </div>
+        @*@Html.DropDownListFor(m => m.CountryID, new SelectList(Model.CountryID, "CountryID", "CountryName"), "--Select Country--")*@
     </div>
-
-    @*<div class="form-group col-md-6">
-             @Html.LabelFor(temp => temp.CountryID)
-             Html.TextBoxFor(temp => temp.CountryID, new { placeholder = "Country", @class = "form-control" })
-             @Html.ValidationMessageFor(temp => temp.CountryID)
-
-            @ @Html.DropDownListFor(Model => Model.CountryID, ViewBag.VCountryList as SelectList, "---Select Country---", new { @id = "CountryID", @class = "form-control" })
-             @Html.ValidationMessageFor(Model => Model.CountryID, "", new { @class = "error" })
-
-    </div>*@
+    <div class="form-group col-md-6">
+        <button type="submit" class="btn btn-success">Register</button><a class="text-danger" href="/Account/Login">Login</a>
 
     </div>
 
-            @Html.ValidationSummary()
 
-            <button type="submit" class="btn btn-success">Register</button>
-        }
+</div>
 
+    @*@Html.ValidationSummary()*@
+}
+
+@section scripts{
+    @*<script src="~/Scripts/jquery.validate.js"></script>
+    <script src="~/Scripts/jquery.validate.unobtrusive.js"></script>*@
+
+
+    <script src="@Url.Content("~/Scripts/jquery.validate.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.js")" type="text/javascript"></script>
+}
