--- a/Investis.Web/Views/Shared/_LoginLayout.cshtml
+++ b/Investis.Web/Views/Shared/_LoginLayout.cshtml
@@ -52,20 +52,20 @@
 </head>
 <body>
     @*<div class="row">
-        <div class="col-md-3">
+            <div class="col-md-3">
 
-        </div>
-        <div class="col-md-3">
+            </div>
+            <div class="col-md-3">
 
-        </div>
-        <div class="col-md-3">
-            @if (!User.Identity.IsAuthenticated)
-            {
-                <a href="/Account/Login" class="btn btn-success">Login</a>
-            }
+            </div>
+            <div class="col-md-3">
+                @if (!User.Identity.IsAuthenticated)
+                {
+                    <a href="/Account/Login" class="btn btn-success">Login</a>
+                }
 
-        </div>
-    </div>*@
+            </div>
+        </div>*@
 
 
     @RenderBody()
@@ -75,18 +75,20 @@
         <div class="page-preloader">Loading</div>
     </div>
     <!-- CORE PLUGINS-->
-    <script src="assets/vendors/jquery/dist/jquery.min.js"></script>
-    <script src="assets/vendors/popper.js/dist/umd/popper.min.js"></script>
-    <script src="assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="assets/vendors/metisMenu/dist/metisMenu.min.js"></script>
-    <script src="assets/vendors/jquery-slimscroll/jquery.slimscroll.min.js"></script>
-    <script src="assets/vendors/jquery-idletimer/dist/idle-timer.min.js"></script>
-    <script src="assets/vendors/toastr/toastr.min.js"></script>
-    <script src="assets/vendors/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="assets/vendors/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
+    <script src="~/assets/vendors/jquery/dist/jquery.min.js"></script>
+    <script src="~/assets/vendors/popper.js/dist/umd/popper.min.js"></script>
+    <script src="~/assets/vendors/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="~/assets/vendors/metisMenu/dist/metisMenu.min.js"></script>
+    <script src="~/assets/vendors/jquery-slimscroll/jquery.slimscroll.min.js"></script>
+    <script src="~/assets/vendors/jquery-idletimer/dist/idle-timer.min.js"></script>
+    <script src="~/assets/vendors/toastr/toastr.min.js"></script>
+    <script src="~/assets/vendors/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="~/assets/vendors/bootstrap-select/dist/js/bootstrap-select.min.js"></script>
     <!-- PAGE LEVEL PLUGINS-->
     <!-- CORE SCRIPTS-->
-    <script src="assets/js/app.min.js"></script>
+    <script src="~/assets/js/app.min.js"></script>
+
+    @RenderSection("scripts", false)
     <!-- PAGE LEVEL SCRIPTS-->
     <script>
         $(function () {
